fixed alignment of mobile banner

--- a/css/app.sass
+++ b/css/app.sass
@@ -41,6 +41,9 @@ a
 
     .ad-small
         display: block
+        position: absolute
+        bottom: 0
+        left: 0
     .ad-large
         display: none
 @media (min-width: 751px)
